<resources>
    <string name="app_name" translatable="false">PaLuego</string>
    <string name="new_account_text">Create new account</string>
    <string name="birth_date">DATE OF BIRTH</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="name">NAME</string>
    <string name="no_visible_field" translatable="false">********</string>
    <string name="select">Select</string>
    <string name="mail_example" translatable="false">mail@mail.com</string>
    <string name="name_lcase">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="name_textfield">Introduce your name</string>
    <string name="mail_textfield">Introduce your e-mail</string>
    <string name="log_in">Log In</string>
    <string name="clear">Clear</string>
    <string name="notes">Notes</string>
    <string name="to_be_written">To be written...</string>
    <string name="content">Content</string>
    <string name="voice_record">Voice Record</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Settings strings -->
    <string name="sync_header">Sync</string>
    <string name="synchronize_automatically">Synchronize automatically</string>
    <string name="notes_settings">Notes settings</string>
    <string name="default_font_size">Default font size</string>
    <string name="notifications">Notifications</string>
    <string name="disable_volume">Disable volume</string>
    <string name="muted">Muted</string>
    <string name="volume_on">Volume on</string>
    <string name="volume">Volume</string>
    <string name="mute_notifications">You will no longer receive notifications</string>
    <string name="unmute_notifications">You can receive notifications</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="settings">Settings</string>
    <string name="sing_in_to_continue">Sing in to continue</string>
    <string name="search">Search</string>
    <string name="title">Title</string>


    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="you_clicked_no">You clicked No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="failed_to_delete_note">Failed to delete note</string>
    <string name="press_back_again_to_exit_the_app">Press back again to exit the app</string>
    <string name="required_name">You must provide your name</string>
    <string name="needed_password">The password is needed to continue</string>
    <string name="authentication_fail">Authentication failed.</string>
    <string name="name_needed">You must provide your name</string>
    <string name="password_needed">The password is needed to continue</string>
    <string name="minimum_chars">Password must have at least 6 characters</string>
    <string name="account_already_exists">This mail has already an account created</string>
    <string name="error">Error</string>
    <string name="auth_failed">Something went wrong with the authentication</string>
    <string name="accept">Accept</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="file_already_exists">The file already exists</string>
    <string name="recording_started">Recording started</string>
    <string name="no_recording_in_progress">No recording in progress</string>
    <string name="record_stopped">Record stopped</string>
    <string name="permission_denied">Permission denied</string>


</resources>