<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/special_red"
    android:orientation="vertical"
    tools:context=".view.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_round_back_arrow_24"
            tools:ignore="NestedWeights,SpeakableTextPresentCheck"
            android:padding="25dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"/>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/bg_white_rounded_left_edge">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightR"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftR"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittexts_background"
            android:ems="10"
            android:hint="@string/name_textfield"
            android:inputType="textPersonName"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightR"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftR"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin"
            app:layout_constraintVertical_bias="0.13"
            tools:text="Aitor Tilla" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittexts_background"
            android:ems="10"
            android:hint="@string/mail_example"
            android:inputType="textEmailAddress"

            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.099" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittexts_background"
            android:ems="10"
            android:hint="@string/select"
            android:inputType="date"

            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.13"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittexts_background"
            android:ems="10"
            android:hint="@string/no_visible_field"
            android:inputType="textPassword"

            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="0.110000014"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/nameCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/emailCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />

        <TextView
            android:id="@+id/passwordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />

        <TextView
            android:id="@+id/birthdateCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="@+id/editTextDate"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/editTextDate" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeftR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRightR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/special_red"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightR"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftR"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate"
            app:layout_constraintVertical_bias="0.3"
            app:rippleColor="@color/special_red" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>