<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/special_red"
    tools:context=".view.activities.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopIconL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomIconL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <ImageView
        android:id="@+id/AppLogo"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/bg_login_icon"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottomIconL"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRightL"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftL"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopIconL"
        app:srcCompat="@drawable/img_app_icon_red"
        app:layout_constraintDimensionRatio="1:1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_rounded_right_edge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineCenterL"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeftInnerL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRightInnerL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightInnerL"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftInnerL"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sing_in_to_continue"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightInnerL"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftInnerL"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <EditText
            android:id="@+id/editTextTextPersonNameL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittexts_background"
            android:ems="10"
            android:hint="@string/mail_textfield"
            tools:text = "Aitor Tilla"
            android:inputType="textPersonName"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightInnerL"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftInnerL"
            app:layout_constraintTop_toTopOf="@+id/signInText"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/nameCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonNameL"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonNameL"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonNameL" />

        <EditText
            android:id="@+id/editTextTextPasswordL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittexts_background"
            android:ems="10"
            android:hint="@string/no_visible_field"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonNameL"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonNameL"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameL"
            app:layout_constraintVertical_bias="0.12"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passwordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPasswordL"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPasswordL"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPasswordL" />


        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/special_red"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightInnerL"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftInnerL"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordL"
            app:rippleColor="@color/special_red" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
            app:layout_constraintStart_toStartOf="@+id/btnLogIn"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
            app:layout_constraintVertical_bias="0.4" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightInnerL"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftInnerL"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>