<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/special_red"
    android:orientation="vertical"
    tools:context=".view.activities.SingleNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_round_back_arrow_24"
            tools:ignore="SpeakableTextPresentCheck"
            android:padding="25dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:paddingStart="20dp"
            tools:text="Note title"
            android:maxLines="2"
            android:textStyle="bold"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/bg_white_rounded_left_edge">

        <ScrollView
            android:id="@+id/scrollNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightR"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftR"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextNoteContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittexts_background"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/to_be_written"
                    android:inputType="textMultiLine"
                    android:minHeight="120dp"
                    android:maxHeight="300dp"
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp" />

            </LinearLayout>
<!--            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." -->
        </ScrollView>




            <TextView
                android:id="@+id/descriptionCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:fontFamily="monospace"
                app:layout_constraintBottom_toTopOf="@+id/scrollNote"
                app:layout_constraintEnd_toEndOf="@+id/scrollNote"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintStart_toStartOf="@+id/scrollNote" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeftR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRightR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <TextView
            android:id="@+id/voiceRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="@string/voice_record"
            app:layout_constraintStart_toStartOf="@+id/descriptionCaption"
            app:layout_constraintTop_toBottomOf="@+id/scrollNote" />

        <ImageButton
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftR"
            app:layout_constraintTop_toBottomOf="@+id/voiceRecord"
            app:srcCompat="@drawable/ic_voice_record_24" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightR"
            app:layout_constraintStart_toStartOf="@+id/guidelineMiddle"
            app:layout_constraintTop_toBottomOf="@+id/voiceRecord"
            app:srcCompat="@drawable/ic_play_button_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>